// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pager /> should not render items 1`] = `
<DocumentFragment>
  <ul
    class="styles_layerStyle__ltatc70"
  />
</DocumentFragment>
`;

exports[`<Pager /> should render first page 1`] = `
<DocumentFragment>
  <ul
    class="styles_layerStyle__ltatc70"
  >
    <li>
      <button
        class="styles__1mdc28jf styles_layerStyle__1mdc28j0 styles_button_variant_dark__1mdc28jj styles_layerStyle__1mdc28j4 styles_button_size_md__1mdc28jl styles_layerStyle__1mdc28j6"
        title="Next page"
      >
        »
      </button>
    </li>
    <li>
      <button
        class="styles__1mdc28jf styles_layerStyle__1mdc28j0 styles_button_variant_dark__1mdc28jj styles_layerStyle__1mdc28j4 styles_button_size_md__1mdc28jl styles_layerStyle__1mdc28j6"
        title="Last page"
      >
        »»
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`<Pager /> should render last page 1`] = `
<DocumentFragment>
  <ul
    class="styles_layerStyle__ltatc70"
  >
    <li>
      <button
        class="styles__1mdc28jf styles_layerStyle__1mdc28j0 styles_button_variant_dark__1mdc28jj styles_layerStyle__1mdc28j4 styles_button_size_md__1mdc28jl styles_layerStyle__1mdc28j6"
        title="First page"
      >
        ««
      </button>
    </li>
    <li>
      <button
        class="styles__1mdc28jf styles_layerStyle__1mdc28j0 styles_button_variant_dark__1mdc28jj styles_layerStyle__1mdc28j4 styles_button_size_md__1mdc28jl styles_layerStyle__1mdc28j6"
        title="Previous page"
      >
        «
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`<Pager /> should render second page 1`] = `
<DocumentFragment>
  <ul
    class="styles_layerStyle__ltatc70"
  >
    <li>
      <button
        class="styles__1mdc28jf styles_layerStyle__1mdc28j0 styles_button_variant_dark__1mdc28jj styles_layerStyle__1mdc28j4 styles_button_size_md__1mdc28jl styles_layerStyle__1mdc28j6"
        title="First page"
      >
        ««
      </button>
    </li>
    <li>
      <button
        class="styles__1mdc28jf styles_layerStyle__1mdc28j0 styles_button_variant_dark__1mdc28jj styles_layerStyle__1mdc28j4 styles_button_size_md__1mdc28jl styles_layerStyle__1mdc28j6"
        title="Previous page"
      >
        «
      </button>
    </li>
    <li>
      <button
        class="styles__1mdc28jf styles_layerStyle__1mdc28j0 styles_button_variant_dark__1mdc28jj styles_layerStyle__1mdc28j4 styles_button_size_md__1mdc28jl styles_layerStyle__1mdc28j6"
        title="Next page"
      >
        »
      </button>
    </li>
    <li>
      <button
        class="styles__1mdc28jf styles_layerStyle__1mdc28j0 styles_button_variant_dark__1mdc28jj styles_layerStyle__1mdc28j4 styles_button_size_md__1mdc28jl styles_layerStyle__1mdc28j6"
        title="Last page"
      >
        »»
      </button>
    </li>
  </ul>
</DocumentFragment>
`;
